<resources>
    <string name="app_name">Akb Latihan1</string>

    <!--String atau text di Main Activity-->
    <string name="str_title_mainActv">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="str_txtbutton1_mainActv">Mulai</string>
    <string name="str_imgDesc_mainActv">Background Halaman Utama</string>

    <!--String atau text di Daftar Activity-->
    <string name="str_title_daftarActv">Kode Keluarga</string>
    <string name="str_deskripsi_daftarActv">Ketikkan kode keluarga yang Ayah Budan miliki disini</string>
    <string name="str_policy_daftarActv">Dengan menekan tombol masuk berarti Anda menyetujui
        <b>Ketentuan Pengguna</b> dan <b>Kebijakan Data</b> kami
    </string>
    <string name="str_btnMasuk">Masuk</string>
    <string name="str_beliKode">Belum punya kode keluarga?</string>
    <string name="str_btnBeliKode">Beli Kode Keluarga Disini</string>
    <string name="str_hintForm_daftarActv">Kode Keluarga</string>

    <!--String atau text di Biodata Activiy-->
    <string name="str_nm_biodataActv">Nama Panggilan Kamu</string>
    <string name="str_umur_biodataActv">Umur Kamu</string>
    <string name="str_hintnm_bioadataActv">Contoh : Budi</string>
    <string name="str_hintumur_biodataActv">Contoh : 12</string>
    <string name="str_btn_selanjutnya">Selanjutnya</string>

    <!--String atau text di Berhasil Activity-->
    <string name="str_btn_ok">Oke</string>
</resources>
