<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiodataActivity">

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_nm_biodataActv"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <EditText
        android:id="@+id/frm_nama_biodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_hintnm_bioadataActv"
        android:fontFamily="@font/rubik_regular"
        android:paddingBottom="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>
    <TextView
        android:id="@+id/tv_umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_umur_biodataActv"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/frm_nama_biodata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_hintumur_biodataActv"
        android:fontFamily="@font/rubik_regular"
        android:paddingBottom="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:maxLength="3"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/tv_umur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </EditText>
    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_costum_yellow_1"
        android:text="@string/str_btn_selanjutnya"
        android:fontFamily="@font/nunito_bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>