<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarActivity">

    <TextView
        android:id="@+id/title_daftarActv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_title_daftarActv"
        android:textSize="26sp"
        android:fontFamily="@font/nunito_bold"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <TextView
        android:id="@+id/desc_daftarActv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_deskripsi_daftarActv"
        android:textSize="17sp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="#000000"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title_daftarActv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <EditText
        android:id="@+id/frm_kode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Kode Keluarga"
        android:textAlignment="center"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_form"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/desc_daftarActv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>
    <TextView
        android:id="@+id/policy_daftarActv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_policy_daftarActv"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/frm_kode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="Masuk"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_costum_yellow_1"
        app:layout_constraintTop_toBottomOf="@+id/policy_daftarActv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>